
		ChangeLog for Net-Dict distribution

2.13 2013-12-23
    - Added "use warnings" to Net::Dict

2.12 2013-11-18

    - Corrected the dependency I meant to add in the previous release.
      I added a dependency on Net::Dict (ie itself) instead.

2.11 2013-11-15

    - Added missing dependency (AppConfig::Std) to Makefile.PL

2.10 2013-07-20

    - Reformatted this file according to CPAN::Changes::Spec
    - Repository details added to metadata (Makefile.PL) and pod
    - License type added to metadata (Makefile.PL)

2.09 2011-12-18

    - Fixed tests that started breaking due to changes in the dict.org server
    - Renamed ChangeLog to Changes & tweaked formatting to CPAN::Changes::Spec

2.08 2011-08-02

    - updated testsuite to refer to dict.org, as test.dict.org no longer exists
    - updated testsuite to reflect the much longer list of databases now hosted on dict.org

2.07 2003-05-06

	- updated testsuite to refer to test.dict.org,
	  and to reflect changes in the databases.

2.06 2002-03-23

	- imported into my home machine's CVS repository
	- updated email address

2.05 2001-04-25

	- moved the inline documentation to a separate file Dict.pod
	- added examples/portuguese.pl which illustrates accessing
	  an english-portuguese dictionary.
	  Example from Jose Joao Dias de Almeida <jj@di.uminho.pt>.

2.04 2001-04-23

	- tidied up the code for auth(), removing debugging statements, etc.
	- added documentation for the auth() method.
	- renamed auth.t to auth.test - don't want this run as
	  part of "make test": it needs my local config for testing.
	  Do something about that later.

2.03 2001-04-23

	- Added code which parses the welcome banner, to get msg id and
	  optional capabilities.
	- Added capabilities() method which returns a list of
	  supported optional capabilities.
	- Added has_capability() method for checking whether a
	  capability is supported by the server.
	- msg_id() method which returns the msg id from the server.